ingress.yaml
apiVersion: networking.k8s.io/v1 #Ingress for accesing without loadbalancing product to k8s pods.
kind: Ingress
metadata:
  name: wp-test-ingress
  labels:
    tier: test
    app: wordpress
  namespace: test
  annotations: # here is started important points. 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec: # spec site. In here it says, when you go ingressip/test -> it goes wp-test-svc 
  rules:
  - host: 
    http:
      paths:
      - pathType: Prefix
        path: /test
        backend:
          service:
            name: wp-test-svc
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-prod-ingress
  labels:
    tier: production
    app: wordpress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - host: 
    http:
      paths:
      - pathType: Prefix
        path: /prod
        backend:
          service:
            name: wp-prod-svc
            port: 
              number: 80
